# rimage

./: INDEX  LICENSE  README  configure  configure.in
R/: fft_filter.R  freq.R  imagematrix.R  jpeg.R  rimage.R  zzz.R
data/: 00Index  logo.RData
man/: cat.Rd  equalize.Rd  fftImg.Rd  fftw.Rd  highpass.Rd  imageType.Rd  imagematrix.Rd  laplacian.Rd  lowpass.Rd  meanImg.Rd  minImg.Rd  plot.imagematrix.Rd  print.imagematrix.Rd  read.jpeg.Rd  rgb2grey.Rd  sobel.Rd  sobel.h.Rd  sobel.v.Rd  thresholding.Rd
src/: Makevars.in  Makevars.win  equalize.cpp  fftw.h  fftw_access_func.c  fftw_access_func.h  freqfilters.cpp  freqfilters.h  interface.cpp  jpegio.c  laplacian.c  matrix.cpp  matrix.h  smooth.c  sobel.c
